src/theme/base.scss
@import "./variables";

html {
  font-size: $font-size-base;
  height: 100%;
}

body {
  background: $app-background;
  padding-bottom: $footer-height;
  min-height: 100%;
  position: relative;
}

a {
  &:hover,
  &:focus,
  &:visited {
    text-decoration: none;
    color: inherit;
  }
}

button {
  background: none;
  border: none;
  padding: 0;
  outline: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  display: inline;
  margin: 0;
  padding: 0;
  font-size: 1rem;
  font-weight: normal;
}

p {
  margin: 0;
  padding: 0;
}

button {
  background: none;
  border: none;
  padding: 0;
  outline: 0;
}

